[gd_scene load_steps=25 format=3 uid="uid://ceqtgmxc4lyxx"]

[ext_resource type="PackedScene" uid="uid://cyceakrgrsniu" path="res://chars/base_enemy.tscn" id="1_rw6eu"]
[ext_resource type="Texture2D" uid="uid://2wwps477elun" path="res://Art_Components/threeformsPJ2.png" id="2_hebac"]
[ext_resource type="Script" path="res://chars/boss_enemy_bt.gd" id="2_u1ga7"]
[ext_resource type="Texture2D" uid="uid://d2ggaktiv0hrj" path="res://knight.png" id="3_3fimp"]
[ext_resource type="BehaviorTree" uid="uid://c73vwom3cvpxj" path="res://ai/trees/boss_ai.tres" id="5_os7gv"]
[ext_resource type="PackedScene" uid="uid://0ug6bp2pmux4" path="res://chars/turret.tscn" id="6_muh1y"]
[ext_resource type="Texture2D" uid="uid://c74d14ub8w3oa" path="res://Art_Components/Shotgun/Escopeta.png" id="7_7ekeh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hme25"]
atlas = ExtResource("2_hebac")
region = Rect2(83, 0, 141, 110)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ugna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hme25")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_em7iy"]
atlas = ExtResource("3_3fimp")
region = Rect2(154, 25, 26, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6unj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_em7iy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_lawcq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-38, -71.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-37.5, -40.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3qgfu"]
resource_name = "attack_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-37.5, -40.5), Vector2(-54, -39), Vector2(-54, -39), Vector2(-72, 35), Vector2(-72, 35)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.523598, -0.523598, -2.09439, -2.09439]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.523598, -0.523598, -2.09439, -2.09439]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-38, -71.25), Vector2(-57, -68), Vector2(-57, -68), Vector2(-77, 14), Vector2(-77, 14)]
}

[sub_resource type="Animation" id="Animation_4kcjx"]
resource_name = "attack_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6, 11), Vector2(-6, 11), Vector2(-49, 11), Vector2(-67, 3), Vector2(-73, -21), Vector2(-73, -62)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-3.14159, -3.14159, -2.35619, -1.57079, -1.57079]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6, 29), Vector2(-6, 29), Vector2(-49, 29), Vector2(-64, 23), Vector2(-66, 3), Vector2(-66, -39)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-3.14159, -3.14159, -2.35619, -1.57079, -1.57079]
}

[sub_resource type="Animation" id="Animation_0ysjj"]
resource_name = "attack_3"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-38, -71.25), Vector2(-80, -83), Vector2(-80, 12), Vector2(-63, 12), Vector2(-38, -71.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 3.14159, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-37.5, -40.5), Vector2(-80, -64), Vector2(-80, 30), Vector2(-64, 30), Vector2(-37.5, -40.5)]
}

[sub_resource type="Animation" id="Animation_pab60"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gmlj7"]
resource_name = "light_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -2.49408, -2.49408, -2.49408, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-38, -71.25), Vector2(-38.6667, -67.5), Vector2(-38.6667, -67.5), Vector2(-90, 6.00001), Vector2(-90, 6.00001), Vector2(-38, -71.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-37.5, -40.5), Vector2(-36, -48), Vector2(-36, -48), Vector2(-87, 25), Vector2(-87, 25), Vector2(-37.5, -40.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -2.49408, -2.49408, -2.49408, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mknfj"]
_data = {
"RESET": SubResource("Animation_lawcq"),
"attack_1": SubResource("Animation_3qgfu"),
"attack_2": SubResource("Animation_4kcjx"),
"attack_3": SubResource("Animation_0ysjj"),
"hit": SubResource("Animation_pab60"),
"light_attack": SubResource("Animation_gmlj7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmq8e"]
size = Vector2(80, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfd8p"]
size = Vector2(96, 98)

[sub_resource type="BlackboardPlan" id="BlackboardPlan_wxdlm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_whai1"]
atlas = ExtResource("7_7ekeh")
region = Rect2(0, 144, 578, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_qaj1r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_whai1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kfec"]
size = Vector2(6, 31.5)

[node name="boss_enemy_bt" instance=ExtResource("1_rw6eu")]
scale = Vector2(0.516248, 0.517893)
script = ExtResource("2_u1ga7")
center = Vector2(528, 136)

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_7ugna")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatedSprite2D" index="0"]
position = Vector2(-37.5, -40.5)
scale = Vector2(0.807692, 1.02174)
sprite_frames = SubResource("SpriteFrames_a6unj")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_mknfj")
}

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_tmq8e")

[node name="AttackTimer" type="Timer" parent="." index="10"]
wait_time = 0.5
one_shot = true

[node name="ShootChangeTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="ChaseTimer" parent="." index="13"]
one_shot = true

[node name="Health" parent="." index="15"]
max_health = 10
immortality = false

[node name="HurtBox" parent="." index="16" node_paths=PackedStringArray("health")]
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_mfd8p")

[node name="BTPlayer" type="BTPlayer" parent="." index="17"]
behavior_tree = ExtResource("5_os7gv")
blackboard_plan = SubResource("BlackboardPlan_wxdlm")

[node name="HBSB" type="Label" parent="." index="18"]
offset_left = -47.0
offset_top = -97.0
offset_right = 46.0
offset_bottom = -74.0
text = "HB: STG:"
metadata/_edit_use_anchors_ = true

[node name="Turret" parent="." index="19" instance=ExtResource("6_muh1y")]

[node name="TurretBody" type="AnimatedSprite2D" parent="Turret" index="2"]
position = Vector2(-2, -24)
scale = Vector2(0.049308, 0.00735294)
sprite_frames = SubResource("SpriteFrames_qaj1r")

[node name="HitBox" parent="." index="20" node_paths=PackedStringArray("stagger")]
stagger = NodePath("../Stagger")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-38, -71.25)
shape = SubResource("RectangleShape2D_4kfec")
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ShootChangeTimer" to="." method="_on_shoot_change_timer_timeout"]
[connection signal="timeout" from="ParryTimer" to="." method="_on_parry_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="got_hit" from="HurtBox" to="." method="_on_hurt_box_got_hit"]
[connection signal="updated" from="BTPlayer" to="." method="_on_bt_player_updated"]
[connection signal="shoot_bullet" from="Turret" to="." method="_on_turret_shoot_bullet"]
[connection signal="parried" from="HitBox" to="." method="_on_hit_box_parried"]
[connection signal="staggered" from="Stagger" to="." method="_on_stagger_staggered"]
